# orbit_wars

./: .gitignore  README.md  README_GEOMETRY.md  TRAINING_CONTRACT.md  cmd.md  deep-research-report.md  orbit_wars_base.py  pyproject.toml  requirements-jax-cuda.txt  simple_heuristic.py  test.txt  train_pair_ranker.py
orbit_bc_eval/: __init__.py  base_agents.py  bc_agent_runtime.py  compare_metric_relevance.py  config.py  eval_report.py  gameplay_score.py  rollout_metrics.py  run_local_matches.py
orbit_bc_training/: __init__.py  checkpoints.py  config.py  dataset.py  decode_policy.py  eval_bc_policy.py  losses.py  model.py  train_bc_policy.py
orbit_geometry_skeleton/: __init__.py  geometry_skeleton.py  open_best_heuristic_original.py
orbit_jax_env/: NOTES.md  __init__.py  _verdeps.py  actions.py  benchmarks.py  build_official_state_bank.py  collision.py  combat.py  comets.py  config.py  features_jax.py  jax_policy.py  movement.py  observation.py  official_state_dataset.py  reset.py  rewards.py  rollout.py  rotation.py  selfplay_smoke.py  simple_heuristic_jax.py  state.py  step.py
orbit_ppo_jax/: actions.py  bc_policy.py  checkpointing.py  eval_vs_heuristic.py  features.py  pfsp.py  pfsp_bank.py  pfsp_eval.py  policy.py  train.py
orbit_ppo_training/: __init__.py  advantages.py  bc_reference.py  checkpointing.py  config.py  eval_ppo.py  metrics.py  opponent_pool.py  policy.py  ppo_loss.py  rewards.py  rollout_worker.py  smoke_test.py  train_ppo.py  trajectory.py  value_head.py
orbit_training_prep/: __init__.py  audit_exact_targets.py  canonical.py  features.py  (+13 more)
(+33 files in other folders)
