[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orbit-dataset-prep"
version = "0.1.0"
description = "Orbit Wars geometry skeleton and dataset preparation pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "torch",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "orbit_geometry_skeleton*",
  "orbit_training_prep*",
  "orbit_bc_training*",
]
